# Module_31_smart_pointer_task_1

./: CMakeLists.txt
src/: main.cpp
